북마크 앱 만들기 : CreateView 만들기
제너릭 뷰인 CreateView를 사용하여 뷰를 만들고,
template_name_suffix를 통하여 template파일 명을 지정해주었다.
form형식으로 template을 만들고, form에 입력 성공시 redirection해줄 url을
success_url을 통하여 앞서만든 ListView로 보내주었다.

--- a/Bookmark/bookmark/templates/bookmark/bookmark_list.html
+++ b/Bookmark/bookmark/templates/bookmark/bookmark_list.html
@@ -18,8 +18,8 @@
                 <td>{{forloop.counter}}</td>
                 <td><a href="#">{{bookmark.site_name}}</a></td>
                 <td><a href="{{bookmark.url}}" target="_blank">{{bookmark.url}}</a></td>
-                <td><a href="#" class="btn btn-success btn-sm"></a>Modify</td>
-                <td><a href="#" class="btn btn-danger btn-sm"></a>Delete</td>
+                <td><a href="#" class="btn btn-success btn-sm">Modify</a></td>
+                <td><a href="#" class="btn btn-danger btn-sm">Delete</a></td>
             </tr>
         {% endfor %}
     </tbody>
