--- a/onlineshop/order/templates/order/create.html
+++ b/onlineshop/order/templates/order/create.html
@@ -15,7 +15,7 @@ Checkout
 
 <script src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js" type="text/javascript"></script>
 {% load static %}
-<script src="{% static 'js/checkout.js' %" type="text/javascript"></script>
+<script src="{% static 'js/checkout.js' %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block content %}
@@ -35,7 +35,7 @@ Checkout
             {{form.as_p}}
             {% csrf_token %}
             <input type="hidden" name="pre_order_id" value="0">
-            <input type="hidden" name="amount" value="{{cart.get_total_price}}">
+            <input type="hidden" name="amount" value="{{cart.get_product_total}}">
             <input type="submit" class="btn btn-primary float-right" value="Place Order">
         </form>
     </div>
